# avellaneda-lee

./: README.md  pyproject.toml  run_phase1.py  run_phase2.py  run_phase3.py  run_phase4.py  run_phase5.py  run_phase6.py  run_tests.py
stat_arb/: pyproject.toml  requirements.txt  run_phase1.py  run_phase2.py  run_phase3.py  run_phase4.py  run_phase5.py  run_phase6.py
stat_arb/config/: base_config.yaml  smoke_config.yaml
stat_arb/data/processed/: attribution.parquet  aum.parquet  cumulative_residuals.parquet  kappa.parquet  m_bar.parquet  metadata.json  metrics.json  ou_diagnostics.json  pca_diagnostics.parquet  pnl.parquet  positions.parquet  raw_signals.parquet  returns.parquet  s_scores.parquet  sensitivity_results.parquet  sigma_eq.parquet  signal_diagnostics.parquet  universe_mask.parquet  validation_dsr.json
stat_arb/data/raw/: DEMO0.csv  DEMO1.csv  DEMO2.csv
stat_arb/src/: cli_paths.py  sample_data.py
stat_arb/src/backtest/: __init__.py  engine.py  metrics.py  phase5.py
stat_arb/src/data/: __init__.py  loader.py  preprocessor.py
stat_arb/src/factors/: __init__.py  pca.py  residuals.py
stat_arb/src/models/: __init__.py  ou_process.py
stat_arb/src/signals/: __init__.py  phase4.py
stat_arb/src/stat_arb_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stat_arb/src/validation/: __init__.py  dsr.py  phase6.py  (+3 more)
stat_arb/stat_arb_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
stat_arb/tests/: test_cli_paths.py  test_engine.py  test_ou_process.py  test_pca.py  test_preprocessor.py  test_signals.py  test_validation.py
(+11 files in other folders)
